deployment/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: visual-app-interface
  labels:
    app: visual-app-interface
    component: frontend
spec:
  to:
    kind: Service
    name: visual-app-interface
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
